// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SideNav testcases should render one level of navigation links 1`] = `
<SideNav
  aria-label="Side navigation"
  defaultExpanded={false}
  links={
    Array [
      Object {
        "icon": <ForwardRef
          className="bx--header__menu-item bx--header__menu-title"
          description="Icon"
          fill="white"
          height={24}
          preserveAspectRatio="xMidYMid meet"
          viewBox="0 0 24 24"
          width={24}
          xmlns="http://www.w3.org/2000/svg"
        />,
        "isEnabled": true,
        "linkContent": "Boards",
        "metaData": Object {
          "element": "a",
          "label": "Boards",
          "onClick": [MockFunction],
          "tabIndex": 0,
        },
      },
    ]
  }
>
  <SideNav__StyledSideNav
    aria-label="Side navigation"
    defaultExpanded={false}
  >
    <StyledComponent
      aria-label="Side navigation"
      defaultExpanded={false}
      forwardedComponent={
        Object {
          "$$typeof": Symbol(react.forward_ref),
          "__docgenInfo": Object {
            "description": "",
            "displayName": "SideNav",
            "methods": Array [
              Object {
                "docblock": null,
                "modifiers": Array [],
                "name": "handleExpand",
                "params": Array [],
                "returns": null,
              },
              Object {
                "docblock": null,
                "modifiers": Array [],
                "name": "handleFocus",
                "params": Array [],
                "returns": null,
              },
              Object {
                "docblock": null,
                "modifiers": Array [],
                "name": "handleBlur",
                "params": Array [],
                "returns": null,
              },
            ],
            "props": Object {
              "aria-label": Object {
                "description": "Required props for accessibility label on the underlying menu",
                "required": false,
                "type": Object {
                  "name": "string",
                },
              },
              "aria-labelledby": Object {
                "description": "",
                "required": false,
                "type": Object {
                  "name": "string",
                },
              },
              "className": Object {
                "defaultValue": Object {
                  "computed": false,
                  "value": "null",
                },
                "description": "Optionally provide a custom class to apply to the underlying <li> node",
                "required": false,
                "type": Object {
                  "name": "string",
                },
              },
              "defaultExpanded": Object {
                "defaultValue": Object {
                  "computed": false,
                  "value": "false",
                },
                "description": "Specify whether the side navigation is expanded or collapsed",
                "required": false,
                "type": Object {
                  "name": "bool",
                },
              },
              "translateById": Object {
                "defaultValue": Object {
                  "computed": false,
                  "value": "function translateById(id) {
  return translations[id];
}",
                },
                "description": "Provide a custom function for translating all message ids within this
component. This function will take in two arguments: the mesasge Id and the
state of the component. From this, you should return a string representing
the label you want displayed or read by screen readers.",
                "required": false,
                "type": Object {
                  "name": "func",
                },
              },
            },
          },
          "attrs": Array [],
          "componentStyle": ComponentStyle {
            "componentId": "SideNav__StyledSideNav-yn3bk8-0",
            "isStatic": true,
            "lastClassName": "gArXB",
            "rules": Array [
              "&&&{background-color:",
              "#171717",
              ";border-top:1px solid #3c4646;height:calc(100% - 3rem);.bx--side-nav__menu[role=\\"menu\\"] .bx--side-nav__link[role=\\"menuitem\\"]{height:2rem;min-height:2rem;padding-left:3.5rem;}.bx--side-nav__link{position:relative;display:flex;align-items:center;text-decoration:none;min-height:3rem;padding-right:1rem;font-weight:400;}button{appearance:none;width:100%;background:transparent;&.bx--side-nav__toggle{background:",
              "#282828",
              ";:hover{background:",
              "#3d3d3d",
              ";}}}button.bx--side-nav__link{border:none;}.bx--side-nav__link > .bx--side-nav__link-text{white-space:nowrap;overflow:hidden;text-overflow:ellipsis;color:",
              "#f3f3f3",
              ";font-size:0.875rem;letter-spacing:0.1px;line-height:1.25rem;-webkit-user-select:none;-moz-user-select:none;-ms-user-select:none;user-select:none;}.bx--side-nav__link:focus{outline:4px solid ",
              "#0062ff",
              ";outline-offset:-4px;}}",
            ],
          },
          "displayName": "SideNav__StyledSideNav",
          "foldedComponentIds": Array [],
          "render": [Function],
          "styledComponentId": "SideNav__StyledSideNav-yn3bk8-0",
          "target": [Function],
          "toString": [Function],
          "warnTooManyClasses": [Function],
          "withComponent": [Function],
          Symbol(Symbol.hasInstance): [Function],
        }
      }
      forwardedRef={null}
    >
      <SideNav
        aria-label="Side navigation"
        className="SideNav__StyledSideNav-yn3bk8-0 gArXB"
        defaultExpanded={false}
        translateById={[Function]}
      >
        <nav
          aria-label="Side navigation"
          className="bx--side-nav__navigation bx--side-nav SideNav__StyledSideNav-yn3bk8-0 gArXB"
          onBlur={[Function]}
          onFocus={[Function]}
        >
          <SideNavItems>
            <ul
              className="bx--side-nav__items"
            >
              <SideNav__StyledSideNavLink
                aria-label="Boards"
                className="disabled"
                element="a"
                icon={
                  <ForwardRef
                    className="bx--header__menu-item bx--header__menu-title"
                    description="Icon"
                    fill="white"
                    height={24}
                    preserveAspectRatio="xMidYMid meet"
                    viewBox="0 0 24 24"
                    width={24}
                    xmlns="http://www.w3.org/2000/svg"
                  />
                }
                key="menu-link-Boards-global"
                label="Boards"
                onClick={[MockFunction]}
                tabIndex={0}
              >
                <StyledComponent
                  aria-label="Boards"
                  className="disabled"
                  element="a"
                  forwardedComponent={
                    Object {
                      "$$typeof": Symbol(react.forward_ref),
                      "attrs": Array [],
                      "componentStyle": ComponentStyle {
                        "componentId": "SideNav__StyledSideNavLink-yn3bk8-1",
                        "isStatic": true,
                        "lastClassName": "jvmqQK",
                        "rules": Array [
                          "&&&{position:relative;display:flex;align-items:center;text-decoration:none;min-height:3rem;padding-right:1rem;font-weight:400;&.bx--side-nav__link--current{background-color:",
                          "#565656",
                          ";}:focus{outline:4px solid ",
                          "#0062ff",
                          ";outline-offset:-4px;}:hover{background-color:",
                          "#3d3d3d",
                          ";}> .bx--side-nav__link-text{white-space:nowrap;overflow:hidden;text-overflow:ellipsis;color:",
                          "#f3f3f3",
                          ";font-size:0.875rem;letter-spacing:0.1px;line-height:1.25rem;-webkit-user-select:none;-moz-user-select:none;-ms-user-select:none;user-select:none;}> .bx--side-nav__icon{margin-right:0.5rem;}}",
                        ],
                      },
                      "displayName": "SideNav__StyledSideNavLink",
                      "foldedComponentIds": Array [],
                      "render": [Function],
                      "styledComponentId": "SideNav__StyledSideNavLink-yn3bk8-1",
                      "target": [Function],
                      "toString": [Function],
                      "warnTooManyClasses": [Function],
                      "withComponent": [Function],
                      Symbol(Symbol.hasInstance): [Function],
                    }
                  }
                  forwardedRef={null}
                  icon={
                    <ForwardRef
                      className="bx--header__menu-item bx--header__menu-title"
                      description="Icon"
                      fill="white"
                      height={24}
                      preserveAspectRatio="xMidYMid meet"
                      viewBox="0 0 24 24"
                      width={24}
                      xmlns="http://www.w3.org/2000/svg"
                    />
                  }
                  label="Boards"
                  onClick={[MockFunction]}
                  tabIndex={0}
                >
                  <SideNavLink
                    aria-label="Boards"
                    className="disabled SideNav__StyledSideNavLink-yn3bk8-1 jvmqQK"
                    element="a"
                    icon={
                      <ForwardRef
                        className="bx--header__menu-item bx--header__menu-title"
                        description="Icon"
                        fill="white"
                        height={24}
                        preserveAspectRatio="xMidYMid meet"
                        viewBox="0 0 24 24"
                        width={24}
                        xmlns="http://www.w3.org/2000/svg"
                      />
                    }
                    label="Boards"
                    onClick={[MockFunction]}
                    tabIndex={0}
                  >
                    <SideNavItem>
                      <li
                        className="bx--side-nav__item"
                      >
                        <Link
                          aria-label="Boards"
                          className="bx--side-nav__link disabled SideNav__StyledSideNavLink-yn3bk8-1 jvmqQK"
                          element="a"
                          icon={
                            <ForwardRef
                              className="bx--header__menu-item bx--header__menu-title"
                              description="Icon"
                              fill="white"
                              height={24}
                              preserveAspectRatio="xMidYMid meet"
                              viewBox="0 0 24 24"
                              width={24}
                              xmlns="http://www.w3.org/2000/svg"
                            />
                          }
                          label="Boards"
                          onClick={[MockFunction]}
                          tabIndex={0}
                        >
                          <a
                            aria-label="Boards"
                            className="bx--side-nav__link disabled SideNav__StyledSideNavLink-yn3bk8-1 jvmqQK"
                            icon={
                              <ForwardRef
                                className="bx--header__menu-item bx--header__menu-title"
                                description="Icon"
                                fill="white"
                                height={24}
                                preserveAspectRatio="xMidYMid meet"
                                viewBox="0 0 24 24"
                                width={24}
                                xmlns="http://www.w3.org/2000/svg"
                              />
                            }
                            label="Boards"
                            onClick={[MockFunction]}
                            tabIndex={0}
                          >
                            <SideNavLinkText>
                              <span
                                className="bx--side-nav__link-text"
                              >
                                Boards
                              </span>
                            </SideNavLinkText>
                          </a>
                        </Link>
                      </li>
                    </SideNavItem>
                  </SideNavLink>
                </StyledComponent>
              </SideNav__StyledSideNavLink>
            </ul>
          </SideNavItems>
          <SideNavFooter
            assistiveText="Open"
            expanded={false}
            onToggle={[Function]}
          >
            <footer
              className="bx--side-nav__footer"
            >
              <button
                className="bx--side-nav__toggle"
                onClick={[Function]}
                title="Open"
                type="button"
              >
                <div
                  className="bx--side-nav__icon"
                >
                  <ChevronRight20
                    height={20}
                    preserveAspectRatio="xMidYMid meet"
                    viewBox="0 0 32 32"
                    width={20}
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <svg
                      aria-hidden={true}
                      focusable="false"
                      height={20}
                      preserveAspectRatio="xMidYMid meet"
                      style={
                        Object {
                          "willChange": "transform",
                        }
                      }
                      viewBox="0 0 32 32"
                      width={20}
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M22 16L12 26l-1.4-1.4 8.6-8.6-8.6-8.6L12 6z"
                      />
                    </svg>
                  </ChevronRight20>
                </div>
                <span
                  className="bx--assistive-text"
                >
                  Open
                </span>
              </button>
            </footer>
          </SideNavFooter>
        </nav>
      </SideNav>
    </StyledComponent>
  </SideNav__StyledSideNav>
</SideNav>
`;

exports[`SideNav testcases should render two levels of navigation links 1`] = `
<SideNav
  aria-label="Side navigation"
  defaultExpanded={false}
  links={
    Array [
      Object {
        "icon": <ForwardRef
          className="bx--header__menu-item bx--header__menu-title"
          description="Icon"
          fill="white"
          height={24}
          preserveAspectRatio="xMidYMid meet"
          viewBox="0 0 24 24"
          width={24}
          xmlns="http://www.w3.org/2000/svg"
        />,
        "isEnabled": true,
        "linkContent": "Boards",
        "metaData": Object {
          "element": "a",
          "label": "Boards",
          "onClick": [MockFunction],
          "tabIndex": 0,
        },
      },
      Object {
        "current": true,
        "icon": <ForwardRef
          className="bx--header__menu-item bx--header__menu-title"
          description="Icon"
          fill="white"
          height={24}
          preserveAspectRatio="xMidYMid meet"
          viewBox="0 0 32 32"
          width={24}
          xmlns="http://www.w3.org/2000/svg"
        />,
        "isEnabled": true,
        "linkContent": "Devices",
        "metaData": Object {
          "element": "a",
          "href": "https://google.com",
          "label": "Devices",
          "target": "_blank",
        },
      },
      Object {
        "childContent": Array [
          Object {
            "content": "Yet another link",
            "metaData": Object {
              "element": "button",
              "label": "Devices",
              "onClick": [MockFunction],
            },
          },
        ],
        "icon": <ForwardRef
          className="bx--header__menu-item bx--header__menu-title"
          description="Icon"
          fill="white"
          height={24}
          preserveAspectRatio="xMidYMid meet"
          viewBox="0 0 32 32"
          width={24}
          xmlns="http://www.w3.org/2000/svg"
        />,
        "isEnabled": true,
        "linkContent": "Members",
        "metaData": Object {
          "element": "button",
          "label": "Members",
        },
      },
    ]
  }
>
  <SideNav__StyledSideNav
    aria-label="Side navigation"
    defaultExpanded={false}
  >
    <StyledComponent
      aria-label="Side navigation"
      defaultExpanded={false}
      forwardedComponent={
        Object {
          "$$typeof": Symbol(react.forward_ref),
          "__docgenInfo": Object {
            "description": "",
            "displayName": "SideNav",
            "methods": Array [
              Object {
                "docblock": null,
                "modifiers": Array [],
                "name": "handleExpand",
                "params": Array [],
                "returns": null,
              },
              Object {
                "docblock": null,
                "modifiers": Array [],
                "name": "handleFocus",
                "params": Array [],
                "returns": null,
              },
              Object {
                "docblock": null,
                "modifiers": Array [],
                "name": "handleBlur",
                "params": Array [],
                "returns": null,
              },
            ],
            "props": Object {
              "aria-label": Object {
                "description": "Required props for accessibility label on the underlying menu",
                "required": false,
                "type": Object {
                  "name": "string",
                },
              },
              "aria-labelledby": Object {
                "description": "",
                "required": false,
                "type": Object {
                  "name": "string",
                },
              },
              "className": Object {
                "defaultValue": Object {
                  "computed": false,
                  "value": "null",
                },
                "description": "Optionally provide a custom class to apply to the underlying <li> node",
                "required": false,
                "type": Object {
                  "name": "string",
                },
              },
              "defaultExpanded": Object {
                "defaultValue": Object {
                  "computed": false,
                  "value": "false",
                },
                "description": "Specify whether the side navigation is expanded or collapsed",
                "required": false,
                "type": Object {
                  "name": "bool",
                },
              },
              "translateById": Object {
                "defaultValue": Object {
                  "computed": false,
                  "value": "function translateById(id) {
  return translations[id];
}",
                },
                "description": "Provide a custom function for translating all message ids within this
component. This function will take in two arguments: the mesasge Id and the
state of the component. From this, you should return a string representing
the label you want displayed or read by screen readers.",
                "required": false,
                "type": Object {
                  "name": "func",
                },
              },
            },
          },
          "attrs": Array [],
          "componentStyle": ComponentStyle {
            "componentId": "SideNav__StyledSideNav-yn3bk8-0",
            "isStatic": true,
            "lastClassName": "gArXB",
            "rules": Array [
              "&&&{background-color:",
              "#171717",
              ";border-top:1px solid #3c4646;height:calc(100% - 3rem);.bx--side-nav__menu[role=\\"menu\\"] .bx--side-nav__link[role=\\"menuitem\\"]{height:2rem;min-height:2rem;padding-left:3.5rem;}.bx--side-nav__link{position:relative;display:flex;align-items:center;text-decoration:none;min-height:3rem;padding-right:1rem;font-weight:400;}button{appearance:none;width:100%;background:transparent;&.bx--side-nav__toggle{background:",
              "#282828",
              ";:hover{background:",
              "#3d3d3d",
              ";}}}button.bx--side-nav__link{border:none;}.bx--side-nav__link > .bx--side-nav__link-text{white-space:nowrap;overflow:hidden;text-overflow:ellipsis;color:",
              "#f3f3f3",
              ";font-size:0.875rem;letter-spacing:0.1px;line-height:1.25rem;-webkit-user-select:none;-moz-user-select:none;-ms-user-select:none;user-select:none;}.bx--side-nav__link:focus{outline:4px solid ",
              "#0062ff",
              ";outline-offset:-4px;}}",
            ],
          },
          "displayName": "SideNav__StyledSideNav",
          "foldedComponentIds": Array [],
          "render": [Function],
          "styledComponentId": "SideNav__StyledSideNav-yn3bk8-0",
          "target": [Function],
          "toString": [Function],
          "warnTooManyClasses": [Function],
          "withComponent": [Function],
          Symbol(Symbol.hasInstance): [Function],
        }
      }
      forwardedRef={null}
    >
      <SideNav
        aria-label="Side navigation"
        className="SideNav__StyledSideNav-yn3bk8-0 gArXB"
        defaultExpanded={false}
        translateById={[Function]}
      >
        <nav
          aria-label="Side navigation"
          className="bx--side-nav__navigation bx--side-nav SideNav__StyledSideNav-yn3bk8-0 gArXB"
          onBlur={[Function]}
          onFocus={[Function]}
        >
          <SideNavItems>
            <ul
              className="bx--side-nav__items"
            >
              <SideNav__StyledSideNavLink
                aria-label="Boards"
                className="disabled"
                element="a"
                icon={
                  <ForwardRef
                    className="bx--header__menu-item bx--header__menu-title"
                    description="Icon"
                    fill="white"
                    height={24}
                    preserveAspectRatio="xMidYMid meet"
                    viewBox="0 0 24 24"
                    width={24}
                    xmlns="http://www.w3.org/2000/svg"
                  />
                }
                key="menu-link-Boards-global"
                label="Boards"
                onClick={[MockFunction]}
                tabIndex={0}
              >
                <StyledComponent
                  aria-label="Boards"
                  className="disabled"
                  element="a"
                  forwardedComponent={
                    Object {
                      "$$typeof": Symbol(react.forward_ref),
                      "attrs": Array [],
                      "componentStyle": ComponentStyle {
                        "componentId": "SideNav__StyledSideNavLink-yn3bk8-1",
                        "isStatic": true,
                        "lastClassName": "jvmqQK",
                        "rules": Array [
                          "&&&{position:relative;display:flex;align-items:center;text-decoration:none;min-height:3rem;padding-right:1rem;font-weight:400;&.bx--side-nav__link--current{background-color:",
                          "#565656",
                          ";}:focus{outline:4px solid ",
                          "#0062ff",
                          ";outline-offset:-4px;}:hover{background-color:",
                          "#3d3d3d",
                          ";}> .bx--side-nav__link-text{white-space:nowrap;overflow:hidden;text-overflow:ellipsis;color:",
                          "#f3f3f3",
                          ";font-size:0.875rem;letter-spacing:0.1px;line-height:1.25rem;-webkit-user-select:none;-moz-user-select:none;-ms-user-select:none;user-select:none;}> .bx--side-nav__icon{margin-right:0.5rem;}}",
                        ],
                      },
                      "displayName": "SideNav__StyledSideNavLink",
                      "foldedComponentIds": Array [],
                      "render": [Function],
                      "styledComponentId": "SideNav__StyledSideNavLink-yn3bk8-1",
                      "target": [Function],
                      "toString": [Function],
                      "warnTooManyClasses": [Function],
                      "withComponent": [Function],
                      Symbol(Symbol.hasInstance): [Function],
                    }
                  }
                  forwardedRef={null}
                  icon={
                    <ForwardRef
                      className="bx--header__menu-item bx--header__menu-title"
                      description="Icon"
                      fill="white"
                      height={24}
                      preserveAspectRatio="xMidYMid meet"
                      viewBox="0 0 24 24"
                      width={24}
                      xmlns="http://www.w3.org/2000/svg"
                    />
                  }
                  label="Boards"
                  onClick={[MockFunction]}
                  tabIndex={0}
                >
                  <SideNavLink
                    aria-label="Boards"
                    className="disabled SideNav__StyledSideNavLink-yn3bk8-1 jvmqQK"
                    element="a"
                    icon={
                      <ForwardRef
                        className="bx--header__menu-item bx--header__menu-title"
                        description="Icon"
                        fill="white"
                        height={24}
                        preserveAspectRatio="xMidYMid meet"
                        viewBox="0 0 24 24"
                        width={24}
                        xmlns="http://www.w3.org/2000/svg"
                      />
                    }
                    label="Boards"
                    onClick={[MockFunction]}
                    tabIndex={0}
                  >
                    <SideNavItem>
                      <li
                        className="bx--side-nav__item"
                      >
                        <Link
                          aria-label="Boards"
                          className="bx--side-nav__link disabled SideNav__StyledSideNavLink-yn3bk8-1 jvmqQK"
                          element="a"
                          icon={
                            <ForwardRef
                              className="bx--header__menu-item bx--header__menu-title"
                              description="Icon"
                              fill="white"
                              height={24}
                              preserveAspectRatio="xMidYMid meet"
                              viewBox="0 0 24 24"
                              width={24}
                              xmlns="http://www.w3.org/2000/svg"
                            />
                          }
                          label="Boards"
                          onClick={[MockFunction]}
                          tabIndex={0}
                        >
                          <a
                            aria-label="Boards"
                            className="bx--side-nav__link disabled SideNav__StyledSideNavLink-yn3bk8-1 jvmqQK"
                            icon={
                              <ForwardRef
                                className="bx--header__menu-item bx--header__menu-title"
                                description="Icon"
                                fill="white"
                                height={24}
                                preserveAspectRatio="xMidYMid meet"
                                viewBox="0 0 24 24"
                                width={24}
                                xmlns="http://www.w3.org/2000/svg"
                              />
                            }
                            label="Boards"
                            onClick={[MockFunction]}
                            tabIndex={0}
                          >
                            <SideNavLinkText>
                              <span
                                className="bx--side-nav__link-text"
                              >
                                Boards
                              </span>
                            </SideNavLinkText>
                          </a>
                        </Link>
                      </li>
                    </SideNavItem>
                  </SideNavLink>
                </StyledComponent>
              </SideNav__StyledSideNavLink>
              <SideNav__StyledSideNavLink
                aria-label="Devices"
                className="disabled"
                element="a"
                href="https://google.com"
                icon={
                  <ForwardRef
                    className="bx--header__menu-item bx--header__menu-title"
                    description="Icon"
                    fill="white"
                    height={24}
                    preserveAspectRatio="xMidYMid meet"
                    viewBox="0 0 32 32"
                    width={24}
                    xmlns="http://www.w3.org/2000/svg"
                  />
                }
                isActive={true}
                key="menu-link-Devices-global"
                label="Devices"
                target="_blank"
              >
                <StyledComponent
                  aria-label="Devices"
                  className="disabled"
                  element="a"
                  forwardedComponent={
                    Object {
                      "$$typeof": Symbol(react.forward_ref),
                      "attrs": Array [],
                      "componentStyle": ComponentStyle {
                        "componentId": "SideNav__StyledSideNavLink-yn3bk8-1",
                        "isStatic": true,
                        "lastClassName": "jvmqQK",
                        "rules": Array [
                          "&&&{position:relative;display:flex;align-items:center;text-decoration:none;min-height:3rem;padding-right:1rem;font-weight:400;&.bx--side-nav__link--current{background-color:",
                          "#565656",
                          ";}:focus{outline:4px solid ",
                          "#0062ff",
                          ";outline-offset:-4px;}:hover{background-color:",
                          "#3d3d3d",
                          ";}> .bx--side-nav__link-text{white-space:nowrap;overflow:hidden;text-overflow:ellipsis;color:",
                          "#f3f3f3",
                          ";font-size:0.875rem;letter-spacing:0.1px;line-height:1.25rem;-webkit-user-select:none;-moz-user-select:none;-ms-user-select:none;user-select:none;}> .bx--side-nav__icon{margin-right:0.5rem;}}",
                        ],
                      },
                      "displayName": "SideNav__StyledSideNavLink",
                      "foldedComponentIds": Array [],
                      "render": [Function],
                      "styledComponentId": "SideNav__StyledSideNavLink-yn3bk8-1",
                      "target": [Function],
                      "toString": [Function],
                      "warnTooManyClasses": [Function],
                      "withComponent": [Function],
                      Symbol(Symbol.hasInstance): [Function],
                    }
                  }
                  forwardedRef={null}
                  href="https://google.com"
                  icon={
                    <ForwardRef
                      className="bx--header__menu-item bx--header__menu-title"
                      description="Icon"
                      fill="white"
                      height={24}
                      preserveAspectRatio="xMidYMid meet"
                      viewBox="0 0 32 32"
                      width={24}
                      xmlns="http://www.w3.org/2000/svg"
                    />
                  }
                  isActive={true}
                  label="Devices"
                  target="_blank"
                >
                  <SideNavLink
                    aria-label="Devices"
                    className="disabled SideNav__StyledSideNavLink-yn3bk8-1 jvmqQK"
                    element="a"
                    href="https://google.com"
                    icon={
                      <ForwardRef
                        className="bx--header__menu-item bx--header__menu-title"
                        description="Icon"
                        fill="white"
                        height={24}
                        preserveAspectRatio="xMidYMid meet"
                        viewBox="0 0 32 32"
                        width={24}
                        xmlns="http://www.w3.org/2000/svg"
                      />
                    }
                    isActive={true}
                    label="Devices"
                    target="_blank"
                  >
                    <SideNavItem>
                      <li
                        className="bx--side-nav__item"
                      >
                        <Link
                          aria-label="Devices"
                          className="bx--side-nav__link bx--side-nav__link--current disabled SideNav__StyledSideNavLink-yn3bk8-1 jvmqQK"
                          element="a"
                          href="https://google.com"
                          icon={
                            <ForwardRef
                              className="bx--header__menu-item bx--header__menu-title"
                              description="Icon"
                              fill="white"
                              height={24}
                              preserveAspectRatio="xMidYMid meet"
                              viewBox="0 0 32 32"
                              width={24}
                              xmlns="http://www.w3.org/2000/svg"
                            />
                          }
                          label="Devices"
                          target="_blank"
                        >
                          <a
                            aria-label="Devices"
                            className="bx--side-nav__link bx--side-nav__link--current disabled SideNav__StyledSideNavLink-yn3bk8-1 jvmqQK"
                            href="https://google.com"
                            icon={
                              <ForwardRef
                                className="bx--header__menu-item bx--header__menu-title"
                                description="Icon"
                                fill="white"
                                height={24}
                                preserveAspectRatio="xMidYMid meet"
                                viewBox="0 0 32 32"
                                width={24}
                                xmlns="http://www.w3.org/2000/svg"
                              />
                            }
                            label="Devices"
                            target="_blank"
                          >
                            <SideNavLinkText>
                              <span
                                className="bx--side-nav__link-text"
                              >
                                Devices
                              </span>
                            </SideNavLinkText>
                          </a>
                        </Link>
                      </li>
                    </SideNavItem>
                  </SideNavLink>
                </StyledComponent>
              </SideNav__StyledSideNavLink>
              <SideNav__StyledSideNavMenu
                aria-label="dropdown"
                className="disabled"
                icon={
                  <ForwardRef
                    className="bx--header__menu-item bx--header__menu-title"
                    description="Icon"
                    fill="white"
                    height={24}
                    preserveAspectRatio="xMidYMid meet"
                    viewBox="0 0 32 32"
                    width={24}
                    xmlns="http://www.w3.org/2000/svg"
                  />
                }
                key="menu-link-2-dropdown"
                title="Members"
              >
                <StyledComponent
                  aria-label="dropdown"
                  className="disabled"
                  forwardedComponent={
                    Object {
                      "$$typeof": Symbol(react.forward_ref),
                      "attrs": Array [],
                      "componentStyle": ComponentStyle {
                        "componentId": "SideNav__StyledSideNavMenu-yn3bk8-2",
                        "isStatic": true,
                        "lastClassName": "kbPKaO",
                        "rules": Array [
                          "&&&{background-color:",
                          "#171717",
                          ";:not(.bx--side-nav__item--active):hover{background-color:",
                          "#171717",
                          ";}> button:hover{background-color:",
                          "#3d3d3d",
                          ";}:hover{background-color:",
                          "#3d3d3d",
                          ";}[aria-expanded=\\"true\\"]{background-color:",
                          "#3d3d3d",
                          ";:hover{background-color:",
                          "#4c4c4c",
                          ";}+ ul{background-color:",
                          "#3d3d3d",
                          ";}+ ul .bx--side-nav__link:hover{background-color:",
                          "#4c4c4c",
                          ";}}.bx--side-nav__link--current::before{content:\\"\\";position:absolute;top:0;bottom:0;left:0;width:4px;background-color:",
                          "#0062ff",
                          ";}}",
                        ],
                      },
                      "displayName": "SideNav__StyledSideNavMenu",
                      "foldedComponentIds": Array [],
                      "render": [Function],
                      "styledComponentId": "SideNav__StyledSideNavMenu-yn3bk8-2",
                      "target": Object {
                        "$$typeof": Symbol(react.forward_ref),
                        "render": [Function],
                      },
                      "toString": [Function],
                      "warnTooManyClasses": [Function],
                      "withComponent": [Function],
                    }
                  }
                  forwardedRef={null}
                  icon={
                    <ForwardRef
                      className="bx--header__menu-item bx--header__menu-title"
                      description="Icon"
                      fill="white"
                      height={24}
                      preserveAspectRatio="xMidYMid meet"
                      viewBox="0 0 32 32"
                      width={24}
                      xmlns="http://www.w3.org/2000/svg"
                    />
                  }
                  title="Members"
                >
                  <ForwardRef
                    aria-label="dropdown"
                    className="disabled SideNav__StyledSideNavMenu-yn3bk8-2 kbPKaO"
                    icon={
                      <ForwardRef
                        className="bx--header__menu-item bx--header__menu-title"
                        description="Icon"
                        fill="white"
                        height={24}
                        preserveAspectRatio="xMidYMid meet"
                        viewBox="0 0 32 32"
                        width={24}
                        xmlns="http://www.w3.org/2000/svg"
                      />
                    }
                    title="Members"
                  >
                    <SideNavMenu
                      aria-label="dropdown"
                      buttonRef={null}
                      className="disabled SideNav__StyledSideNavMenu-yn3bk8-2 kbPKaO"
                      defaultExpanded={false}
                      icon={
                        <ForwardRef
                          className="bx--header__menu-item bx--header__menu-title"
                          description="Icon"
                          fill="white"
                          height={24}
                          preserveAspectRatio="xMidYMid meet"
                          viewBox="0 0 32 32"
                          width={24}
                          xmlns="http://www.w3.org/2000/svg"
                        />
                      }
                      isActive={false}
                      title="Members"
                    >
                      <li
                        className="bx--side-nav__item disabled SideNav__StyledSideNavMenu-yn3bk8-2 kbPKaO"
                      >
                        <button
                          aria-expanded={false}
                          aria-haspopup="true"
                          className="bx--side-nav__submenu"
                          onClick={[Function]}
                          type="button"
                        >
                          <span
                            className="bx--side-nav__submenu-title"
                          >
                            Members
                          </span>
                          <SideNavIcon
                            className="bx--side-nav__submenu-chevron"
                            small={true}
                          >
                            <div
                              className="bx--side-nav__icon bx--side-nav__icon--small bx--side-nav__submenu-chevron"
                            >
                              <ChevronDown20
                                height={20}
                                preserveAspectRatio="xMidYMid meet"
                                viewBox="0 0 32 32"
                                width={20}
                                xmlns="http://www.w3.org/2000/svg"
                              >
                                <svg
                                  aria-hidden={true}
                                  focusable="false"
                                  height={20}
                                  preserveAspectRatio="xMidYMid meet"
                                  style={
                                    Object {
                                      "willChange": "transform",
                                    }
                                  }
                                  viewBox="0 0 32 32"
                                  width={20}
                                  xmlns="http://www.w3.org/2000/svg"
                                >
                                  <path
                                    d="M16 22L6 12l1.4-1.4 8.6 8.6 8.6-8.6L26 12z"
                                  />
                                </svg>
                              </ChevronDown20>
                            </div>
                          </SideNavIcon>
                        </button>
                        <ul
                          className="bx--side-nav__menu"
                          role="menu"
                        >
                          <ForwardRef(SideNavMenuItem)
                            element="button"
                            key="menu-link-0-child"
                            label="Devices"
                            onClick={[MockFunction]}
                          >
                            <li
                              className="bx--side-nav__menu-item"
                              role="none"
                            >
                              <Link
                                className="bx--side-nav__link"
                                element="button"
                                label="Devices"
                                onClick={[MockFunction]}
                                role="menuitem"
                              >
                                <button
                                  className="bx--side-nav__link"
                                  label="Devices"
                                  onClick={[MockFunction]}
                                  role="menuitem"
                                >
                                  <SideNavLinkText>
                                    <span
                                      className="bx--side-nav__link-text"
                                    >
                                      Yet another link
                                    </span>
                                  </SideNavLinkText>
                                </button>
                              </Link>
                            </li>
                          </ForwardRef(SideNavMenuItem)>
                        </ul>
                      </li>
                    </SideNavMenu>
                  </ForwardRef>
                </StyledComponent>
              </SideNav__StyledSideNavMenu>
            </ul>
          </SideNavItems>
          <SideNavFooter
            assistiveText="Open"
            expanded={false}
            onToggle={[Function]}
          >
            <footer
              className="bx--side-nav__footer"
            >
              <button
                className="bx--side-nav__toggle"
                onClick={[Function]}
                title="Open"
                type="button"
              >
                <div
                  className="bx--side-nav__icon"
                >
                  <ChevronRight20
                    height={20}
                    preserveAspectRatio="xMidYMid meet"
                    viewBox="0 0 32 32"
                    width={20}
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <svg
                      aria-hidden={true}
                      focusable="false"
                      height={20}
                      preserveAspectRatio="xMidYMid meet"
                      style={
                        Object {
                          "willChange": "transform",
                        }
                      }
                      viewBox="0 0 32 32"
                      width={20}
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M22 16L12 26l-1.4-1.4 8.6-8.6-8.6-8.6L12 6z"
                      />
                    </svg>
                  </ChevronRight20>
                </div>
                <span
                  className="bx--assistive-text"
                >
                  Open
                </span>
              </button>
            </footer>
          </SideNavFooter>
        </nav>
      </SideNav>
    </StyledComponent>
  </SideNav__StyledSideNav>
</SideNav>
`;
